# riptidal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run.py
api/: __init__.py  auth.py  client.py  keys.py  models.py  musicbrainz_client.py
core/: __init__.py  album_handler.py  download_models.py  downloader.py  library_scanner.py  settings.py  track_manager.py  video_handler.py
tests/: conftest.py
tests/api/: __init__.py  test_models.py
tests/core/: __init__.py  test_downloader.py  test_settings.py  test_track_manager.py
tests/utils/: __init__.py  test_paths.py
ui/: __init__.py  cli.py  input_utils.py  menu.py  progress_display.py
ui/handlers/: __init__.py  auth_handler.py  download_handler.py  library_upgrade_handler.py  settings_handler.py
utils/: __init__.py  logger.py  paths.py
