[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riptidal"
version = "0.2.7"
description = "RIPTIDAL - A Python 3.12+ application for downloading music from Tidal (Personal Use Only)"
readme = "README.md"
authors = [
    {name = "RIPTIDAL Team"}
]
license = {text = "MIT"}
keywords = ["tidal", "music", "downloader", "audio", "personal-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.1",
    "pydantic>=2.5.2",
    "rich>=13.7.0",
    "mutagen>=1.47.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/riptidal"
"Bug Tracker" = "https://github.com/yourusername/riptidal/issues"

[project.scripts]
riptidal = "main:main_cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "api",
    "core",
    "ui",
    "utils",
    "tests"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
